z-index of a bajillion cuz people keep abusing z-index (pls stop) + other nav fixes

--- a/_sass/nighthawk/dropdown-menu.scss
+++ b/_sass/nighthawk/dropdown-menu.scss
@@ -89,4 +89,6 @@
 
 .dropbtn {
     border: none;
+    background-color: transparent !important;
+    text-decoration: underline;
 }
