--- a/_sass/nighthawk/navbar.scss
+++ b/_sass/nighthawk/navbar.scss
@@ -4,6 +4,7 @@
     border-bottom: 1px solid #404040;
     background: rgba(50, 50, 50, 0.5);
     font-weight: bold;
+    z-index: 999999999;
 }
 
 .site-nav {
